--- a/root/css/contactus.css
+++ b/root/css/contactus.css
@@ -39,35 +39,7 @@ font-family: 'Ubuntu';
   color:white;
   background-color:#4CBB17;/* #00E8E8;*/
 }
-.text{
-  text-decoration: none;
-  color:red;
-}
-.site-content{
 
-  background-attachment: fixed;
-  height:300px;
-  background-size: cover;
-}
-.site-title, .site-desc{
-  font-family: 'Righteous';
- color:black;
-}
-.site-title{
-  margin-top: 30%;
-  margin-bottom: 6%;
-  font-size: 50px;
-  color:white;
-}
-.site-desc{
-  font-size: 14px;
-
-  font-size: 40px;
-}
-
-.flex-column{
-  color:black;
-}
 /*section1*/
 .section-1 .heading-1{
   margin-top: 4%;
@@ -84,6 +56,145 @@ font-family: 'Ubuntu';
   font-size: 18px;
 }
 
+/*section*/
+.contact{
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: url(./images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg);
+  background-size: cover;
+}
+.contact .content{
+  max-width: 800px;
+  text-align: center;
+}
+.contact .content h2{
+  font-size: 36px;
+  font-weight: 500;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  color:black;/* #fff;*/
+}
+.contact .content p{
+  font-weight: 300;
+  color:black/* #fff;*/
+}
+.container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.container .contactinfo{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.container .contactinfo .box{
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+.container .contactinfo .box .icon{
+  min-width: 60px;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+}
+.container .contactinfo .box .text{
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+
+.container .contactinfo .box .text h3{
+  font-weight: 500;
+  color: #00bcd4;
+}
+.container .contactinfo .box .text p{
+  color: black;
+}
+.contactform{
+  width: 100$;
+  padding: 40px;
+  background: #fff;
+}
+.contactform h2{
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
+}
+.contactform .inputbox{
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactform .inputbox input
+.contactform .inputbox textarea{
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+.contactform .inputbox span{
+  position: absolute;
+  left: 0;
+  padding: 5px 10px;
+  font-size: 16px;
+/*  margin: 10px 0;*/
+  pointer-events: none;
+
+  transition: 0.5s;
+  color: #666;
+}
+.contactform .inputbox input:focus ~ span,
+.contactform .inputbox input:valid ~ span,
+.contactform .inputbox textarea:focus ~ span,
+.contactform .inputbox textarea:valid ~ span{
+  color: #e91e63;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+.contactform .inputbox input[type="submit"]{
+  width: 100px;
+  background: #00bcd4;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+@media (max-width:991px){
+  .contact{
+    padding: 50px;
+  }
+  .container{
+    flex-direction: column;
+  }
+  .container .contactinfo{
+    margin-bottom: 40px;
+  }
+  .container .contactinfo,
+  .contactform{
+   width: 100%;
+  }
+}
 
 
 
@@ -275,7 +386,7 @@ margin-top: 80px;
   margin: 0;
   margin-top: 20px;
   line-height: 32px;
-}
+}*/
 /*media queriws*/
 @media (max-width: 880px) {
 
