--- a/root/css/aboutus.css
+++ b/root/css/aboutus.css
@@ -142,7 +142,7 @@ font-family: 'Ubuntu';
 }*/
  h2{
   font-size: 22px;
-  font-weight: bold;
+  /*font-weight: bold;*/
   margin-top: 15px;
 }
  h3{
@@ -204,7 +204,7 @@ font-family: 'Ubuntu';
 .partners h2{
  padding-top: 90px;
  text-align: center;
- font-weight: bold;
+ /*font-weight: bold;*/
  letter-spacing: 2px;
  color: #333;
  padding-bottom: 10px;
