--- a/root/css/jobseeker.css
+++ b/root/css/jobseeker.css
@@ -23,7 +23,7 @@ font-family: 'Ubuntu';
   color:#00E8E8 !important;
 }
 .active .nav-link{
-  color:#00E8E8 !important;
+  color:blue !important;
 }
 .menu-right-btn{
   padding: 13px 46px;
@@ -44,9 +44,9 @@ font-family: 'Ubuntu';
   color:red;
 }
 .site-content{
-  background-image: url("../images/pexels-christina-morillo-1181344.jpg");
+  /*background-image: url("../images/pexels-marily-torres-776615.jpg");*/
   background-attachment: fixed;
-  height:800px;
+  height:400px;
   background-size: cover;
 }
 .site-title, .site-desc{
@@ -68,6 +68,199 @@ font-family: 'Ubuntu';
 .flex-column{
   color:black;
 }
+/*section*/
+.section-1 .heading-1{
+  margin-top: 6%;
+  margin-bottom: 3%;
+  font-family: 'Righteous';
+  width: 80%;
+  color:#E32B47;
+}
+.section-1 h3{
+  padding-bottom: 30px;
+}
+.section-1 .para{
+  width: 80%;
+  font-family: 'Ubuntu';
+  color: whitesmoke;
+  margin-bottom: 2%;
+  font-size: 18px;
+}
+.section-1 .btn{
+  margin-bottom: 5%;
+  margin-top: 3%;
+  margin-left: 60px;
+  font-size: 20px;
+  width:22%;
+  border-radius: 50px;
+   color: white;
+  padding: 2% 5%;
+}
+.anchor{
+  color: orange;
+  font-size: 25px;
+}
+.anchor:hover{
+  text-decoration: none;
+  color: green;
+}
+.section-1 h4{
+  margin-left: 40px;
+}
+/*section*/
+.section-2 .container-fluid{
+  background-image: url('../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');
+  background-size: cover;
+  /*background-attachment: fixed;*/
+  height: 700px;
+}
+.section-2 .heading-1{
+  margin-top: 20%;
+  margin-bottom: 4%;
+  font-family: 'Righteous';
+  width: 80%;
+  color: whitesmoke;
+}
+.section-2 .para{
+  width: 80%;
+  font-family: 'Ubuntu';
+  color: whitesmoke;
+  margin-bottom: 7%;
+}
+.section-2 .btn{
+  margin-bottom: 15%;
+  width:30%;
+  padding: 2% 5%;
+}
+
+/*loginform*/
+section{
+  background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg");
+    background-size: cover;
+    background-size: 1000px;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  display: flex;
+  font-family: sans-serif;
+  font-style: italic;
+
+  position:absolute;
+
+  padding:150px 100px 100px;
+  font-family: "georgian",sans-serif;
+
+  width: 100%;
+
+  background-position: center;
+  background-size: 1900px;
+  min-height: 100vh;
+  display: flex;
+  background-size: cover;
+  background-position: center;
+}
+.login-form{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    padding: 15px;
+}
+  .form-box{
+    width: 400px;
+    height: 450px;
+    position: relative;
+    margin: 8% auto;
+    background: rgba(0,0,0,0.8);
+    padding: 50px;
+  /*box-shadow: 0 0 20px 9px #ff61241f;*/
+    border-radius: 100px;
+  display: flex;
+  flex-direction: column;
+  }
+  .input-group{
+    top:130px;
+    position: absolute;
+    width: 300px;
+    transition: .5s;
+  display: flex;
+  flex-direction: column;
+  }
+  h1{
+    color:white;
+    text-align: center;
+  }
+  .input-field{
+    width: 100%;
+    padding: 10px 0;
+    margin: 15px 0;
+    font-size: 16px;
+    color:black;
+    font-weight: 200px;
+    border-left:12px;
+    border-top:0;
+    border-right:0;
+    border-bottom: 2px solid #999;
+    outline : none;
+  display: flex;
+  flex-direction: column;
+    background: transparent;
+  }
+  .submit-btn{
+    width: 110px;
+  height: 50px;
+    padding 20px 30px;
+    cursor: pointer;
+    display:block;
+    margin: auto;
+    background: rgba(10,20,10,0.7);
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+  font-size: 16px;
+    color: #fff;
+    font-weight: 200px;
+    text-decoration: none;
+  }
+  .submit-btn:hover{
+    background-color: green;
+  }
+  .checkbox{
+    margin: 30px 10px 30px 0;
+  }
+  .reg{
+    margin: 30px 10px 30px 0;
+    color:white;
+  }
+  .reg:hover{
+    color: white;
+    text-decoration: none;
+  }
+  /*span{
+    color:#777;
+    font-size: 12px;
+    bottom: 68px;
+    position: absolute;
+  }*/
+  #login{
+    left: 50px;
+  }
+span{
+  color:blue;
+}
+span:hover{
+  color: green;
+}
+/*responsive*/
+@media(max-width: 500px){
+body{
+min-width: 100%;
+padding: 30px;
+}
+.form-box{
+min-width: 100%;
+}
+}
 
 
 
@@ -79,8 +272,7 @@ font-family: 'Ubuntu';
 
 
 
-
-
+/*footer*/
 .main {
   max-height: 50px;
   background-color: #292c2f;
@@ -129,8 +321,9 @@ margin-top: 80px;
 .footer-distributed h3 span{
   color:  #5383d3;
 }
-
-
+.foot{
+    color:  #92999f;
+}
 .footer-distributed .footer-links{
   color:  #ffffff;
   margin: 20px 0 12px;
