--- a/root/css/emplogin.css
+++ b/root/css/emplogin.css
@@ -23,7 +23,7 @@ font-family: 'Ubuntu';
   color:#00E8E8 !important;
 }
 .active .nav-link{
-  color:#00E8E8 !important;
+  color:blue !important;
 }
 .menu-right-btn{
   padding: 13px 46px;
@@ -68,6 +68,128 @@ font-family: 'Ubuntu';
 .flex-column{
   color:black;
 }
+/*section*/
+section{
+    position:relative;
+    display: flex;
+   justify-content:space-between;
+   align-items: center;
+    min-height: 60vh;
+    padding:150px 100px 100px;
+
+    align-items: center;
+    font-family: "georgian",sans-serif;
+    opacity:1;
+
+    background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg") no-repeat;
+    background-size: cover;
+    background-size: 1900px;
+    align-items: center;
+    justify-content: center;
+
+    display: flex;
+    font-family: sans-serif;
+    width: 100%;
+}
+h2{
+  font-size: 16px;
+  text-align: left;
+  padding-left: 80px;
+}
+.div1{
+  align-items: left;
+  font-size: 22px;
+  margin-top: 100px;
+  margin-right:160px;
+}
+.container{
+  position: relative;
+  margin-top: 100px;
+  height:auto;
+  background: #dedede;
+  border-radius: 5px;
+  /*border: 1px solid gray;*/
+}
+.label{
+  padding: 20px 70px;
+  font-size: 35px;
+  font-weight: bold;
+  color:#130f40;
+}
+.login_form{
+  padding: 20px 40px;
+}
+.login_form .font{
+  font-size: 18px;
+  color:#130f40;
+  margin: 5px 0;
+}
+.login_form input{
+   height: 40px;
+   width:350px;
+   padding: 0 5px;
+   font-size: 18px;
+   outline:none;
+   border:1px solid silver;
+  }
+  .login_form .font2{
+    margin-top: 30px;
+  }
+  .login_form button{
+    margin: 45px 0 35px 0;
+    height:45px;
+    width:365px;
+    font-size: 20px;
+    color: white;
+    outline: none;
+    cursor:pointer;
+    font-weight: bold;
+    background: #e34234;/*1A237E;*/
+    border-radius: 3px;
+    /*border: 1px solid #3949AB;*/
+    transition: .5s;
+  }
+  .login_form button:hover{
+     background: orange;// #151c6a;
+  }
+  .row100{
+  	padding-top: 10px;
+  	padding-right: 10px;
+  	padding-left: 10px;
+  	padding-bottom: 5px;
+  }
+  .login_form #email_error,
+  .login_form #pass_error{
+    margin-top: 5px;
+    width:345px;
+    font-size: 18px;
+    color:#c62828;
+    background: rgba(255,0,0,0.1);
+    text-align: center;
+    padding: 5px 8px;
+    border-radius: 3px;
+    border:1px solid #EF9A9A;
+    display: none;
+  }
+/*section4*/
+/*.section-4{
+  margin-top: 8%;
+}
+.section-4 .row .col-md-7, .col-md-5{
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+.section-4 a{
+  color:lightseagreen;
+  font-size: 40px;
+  text-decoration: none;
+}
+.section-4 .para-1{
+  color: white;
+  font-family: 'Roboto Condensed';
+  margin-top:7%;
+  font-size: 23px;
+}*/
 
 
 
@@ -78,8 +200,7 @@ font-family: 'Ubuntu';
 
 
 
-
-
+/*footer*/
 
 .main {
   max-height: 50px;
