--- a/root/css/empreg.css
+++ b/root/css/empreg.css
@@ -23,7 +23,7 @@ font-family: 'Ubuntu';
   color:#00E8E8 !important;
 }
 .active .nav-link{
-  color:#00E8E8 !important;
+  color:blue !important;
 }
 .menu-right-btn{
   padding: 13px 46px;
@@ -68,6 +68,87 @@ font-family: 'Ubuntu';
 .flex-column{
   color:black;
 }
+/*section*/
+section{
+	background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg") no-repeat center fixed;
+  background-size: cover;
+	align-items: center;
+	justify-content: center;
+	min-height: 130vh;
+	display: flex;
+  position:relative;
+  display: flex;
+  padding:150px 100px 100px;
+  font-family: "georgian",sans-serif;
+  opacity: 1;
+  width: 100%;
+}
+.wrapper{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  max-width: 450px;
+  width: 100%;
+  background: #fff;
+  padding: 25px;
+  border-radius: 5px;
+/*  box-shadow: 4px 4px 2px rgba(254,236,164,1);*/
+}
+a:hover{
+  color:green;
+  text-decoration: none;
+}
+.wrapper h2{
+  text-align: center;
+  margin-bottom: 20px;
+
+  letter-spacing: 3px;
+  color: #332902;
+}
+
+.wrapper .input_field{
+  margin-bottom: 20px;
+}
+
+.wrapper .input_field input[type="text"],
+.wrapper textarea{
+  border: 1px solid #e0e0e0;
+  width: 100%;
+  padding: 10px;
+}
+
+.wrapper textarea{
+  resize: none;
+  height: 80px;
+}
+
+.wrapper .btn input[type="submit"]{
+   border: 0px;
+  margin-top: 15px;
+  margin-left: 90px;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  height: 40px;
+  width: 100%;
+  background: orange;
+  color: #332902;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+#error_message{
+  margin-bottom: 20px;
+  background:#fe8b8e;
+  padding: 0px;
+  text-align: center;
+  font-size: 14px;
+  transition: all 0.5s ease;
+}
 
 
 
@@ -79,8 +160,7 @@ font-family: 'Ubuntu';
 
 
 
-
-
+/*footer*/
 .main {
   max-height: 50px;
   background-color: #292c2f;
