--- a/root/css/traininglogin.css
+++ b/root/css/traininglogin.css
@@ -23,7 +23,7 @@ font-family: 'Ubuntu';
   color:#00E8E8 !important;
 }
 .active .nav-link{
-  color:#00E8E8 !important;
+  color:blue !important;
 }
 .menu-right-btn{
   padding: 13px 46px;
@@ -68,6 +68,116 @@ font-family: 'Ubuntu';
 .flex-column{
   color:black;
 }
+/*form*/
+section{
+  background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg") no-repeat center fixed;
+    background-size: cover;
+    background-size: 1900px;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  display: flex;
+  font-family: sans-serif;
+  font-style: italic;
+
+  position:relative;
+
+  padding:150px 100px 100px;
+  font-family: "georgian",sans-serif;
+
+  width: 100%;
+
+	background-position: center;
+	background-size: 1900px;
+	min-height: 100vh;
+	display: flex;
+
+}
+.wrapper{
+	min-height: 100vh;
+	display: flex;
+
+	justify-content: center;
+	align-items: center;
+	margin-left: 140px;
+}
+h2{
+	font-size: 16px;
+	color: gray;
+}
+.form{
+	width: 425px;
+	height: auto;
+	background: #fff;
+	padding: 35px 50px;
+	border-radius: 2px;
+}
+
+.form .title{
+	text-align: center;
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 24px;
+}
+
+.form .input_wrap{
+	margin-bottom: 20px;
+	width: 325px;
+	position: relative;
+}
+
+.form .input_wrap:last-child{
+	margin-bottom: 0;
+}
+
+.form .input_wrap label{
+	display: block;
+	margin-bottom: 5px;
+}
+
+.form .input_wrap input{
+	padding: 15px;
+	width: 100%;
+	border: 1px solid transparent;
+	font-size: 16px;
+	border-radius: 3px;
+}
+
+.form .input_wrap .input{
+	background: #f5f4f4;
+	padding-right: 35px;
+}
+
+
+.form .input_wrap .input:focus{
+	border-color: #1dbf73;
+}
+
+.form .input_wrap .input_field{
+	position: relative;
+}
+
+.form .input_wrap .btn{
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	color: #fff;
+}
+
+.form .input_wrap .btn.disabled{
+	background: #727272;
+}
+
+.form .input_wrap .btn.enabled{
+	background: #1dbf73;
+	cursor: pointer;
+}
+
+.form .input_wrap .error_msg{
+	font-size: 15px;
+	margin-bottom: 5px;
+	color: #f74040;
+	display: none;
+}
 
 
 
@@ -79,8 +189,7 @@ font-family: 'Ubuntu';
 
 
 
-
-
+/*footer*/
 .main {
   max-height: 50px;
   background-color: #292c2f;
