--- a/root/css/aboutus.css
+++ b/root/css/aboutus.css
@@ -59,12 +59,6 @@ font-family: 'Ubuntu';
   font-size: 50px;
   color:white;
 }
-/*.site-desc{
-  font-size: 14px;
-
-  font-size: 40px;
-}*/
-
 .flex-column{
   color:black;
 }
@@ -133,13 +127,7 @@ font-family: 'Ubuntu';
 .profile{
   margin-top: 65px;
 }
-/*.profile .img-box{
-  opacity: 1;
-  display: block;
-  position: relative;
-  max-width: 20px;
-  height: 2%;
-}*/
+
  h2{
   font-size: 22px;
   /*font-weight: bold;*/
@@ -196,7 +184,7 @@ font-family: 'Ubuntu';
 .img-box:after,.img-box ul,.img-box ul li{
   transition:all 0.5s ease-in-out 0s;
 }
-/*section*/
+/*section 4*/
 .partners{
  margin-top: 90px;
   margin-bottom: 130px;
