--- a/root/css/trainingreg.css
+++ b/root/css/trainingreg.css
@@ -69,18 +69,7 @@ font-family: 'Ubuntu';
   color:black;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+/*footer*/
 .main {
   max-height: 50px;
   background-color: #292c2f;
